--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset='utf-8'>
     <title>Enlisted Air Force Ranks</title>
+
     <link rel="stylesheet" href="css/app.css">
+
+    <link href='http://fonts.googleapis.com/css?family=Rosario' rel='stylesheet' type='text/css'>
+
 <!--     <link rel="stylesheet" href="css/bootstrap.css"> -->
  
     <script src="lib/angular/angular.js"></script>
@@ -43,6 +47,24 @@
             <p>{{rank.role}}</p>
           </div>
 
+        </li>
+      </ul>
+    </div>
+    <div class="background">
+      <ul>
+        <li>
+          <p>This site was made as an educational and entertainment side project while learning <a href="http://angularjs.org/">Angular</a>, and is in no way associated with the United States Air Force.  Feel free to share your thoughts by  <a href="https://twitter.com/intent/tweet?screen_name=LewisJPaul">Twitter</a>. To learn about the the U.S. Air Force please visit one of their official sites linked below.</p>
+        <div class="links">
+
+          <a href=""></a>
+
+          <form method="link" action="http://www.af.mil/"><input type ="submit" value ="Home Page of the U.S. Air Force"></form>
+
+          <form method="link" action="http://www.ang.af.mil/"><input type="submit" value= "Air National Guard"></form>
+
+          <form method="link" action="http://www.airforce.com/"><input type="submit" value="Join the Air Force"></form>
+        </div>
+        </p> 
         </li>
       </ul>
     </div>
