data in controllers.js

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,10 @@
             <strong>
               <p>{{rank.name}}</p>
             </strong>
+            <p>
+              Abbreviation: 
+              <em>{{rank.Abbrev}}</em>
+            </p>
             <p>Pay Grade: 
             <em>
               {{rank.payGrade}}</p>
